--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ else {
 
 document.getElementById('download-link').setAttribute('href', 'downloadLink');
 
-window.location = downloadLink;
+if (downloadLink != null) {
+    window.location = downloadLink;
+}
  
 </script>
 </body>
