--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ else if(navigator.userAgent.match(/android/i)) {
     downloadLink = "https://play.google.com/store/apps/details?id=net.plazz.mea.telekomevents";
 }
 else {
-    document.getElementById('download-link').style.display = "none";
+    document.getElementById('download-text').style.display = "none";
     document.getElementById('not-mobile').style.display = "inline";
 }
 
